PROJECT(Analysiser)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ADD_COMPILE_OPTIONS(-Ofast)
ADD_COMPILE_OPTIONS(-g)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
#ADD_COMPILE_OPTIONS(-lpcap)

#INCLUDE(FindLIBPCAP.cmake)
FIND_LIBRARY(PCAP pcap REQUIRED)
#FIND_PACKAGE(PCAP)


ADD_SUBDIRECTORY(src)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)

#TODO: ADD_EXECUTABLES AND TARGET_LINK_LIBRARIES

ADD_EXECUTABLE(unpcap unpcap.c)
TARGET_LINK_LIBRARIES(unpcap ${PCAP})
ADD_EXECUTABLE(main main.c)
TARGET_LINK_LIBRARIES(main src_lib ${PCAP})

INSTALL(TARGETS unpcap main DESTINATION bin)
