PROJECT(Analysiser)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

#ADD_COMPILE_OPTIONS(-Ofast)
ADD_COMPILE_OPTIONS(-g)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

FIND_LIBRARY(PCAP pcap REQUIRED)


ADD_SUBDIRECTORY(src)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)

#TODO: ADD_EXECUTABLES AND TARGET_LINK_LIBRARIES

ADD_EXECUTABLE(unpcap unpcap.c)
TARGET_LINK_LIBRARIES(unpcap ${PCAP})
ADD_EXECUTABLE(main main.cpp)
TARGET_LINK_LIBRARIES(main cxx_src_lib c_src_lib ${PCAP})
ADD_EXECUTABLE(tcpflow tcpflow.c)
TARGET_LINK_LIBRARIES(tcpflow ${PCAP})
ADD_EXECUTABLE(http http.cpp)
TARGET_LINK_LIBRARIES(http cxx_src_lib ${PCAP})

INSTALL(TARGETS unpcap main tcpflow http DESTINATION bin)
